--- a/components/layouts/css/timelinecss.css
+++ b/components/layouts/css/timelinecss.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700");
+/* @import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700"); */
 body {
   height: 100vh;
   font-family: "Open Sans", sans-serif;
@@ -84,7 +84,7 @@ body {
 .container span.number span {
   position: absolute;
   font-size: 10px;
-  left: -35px;
+  left: -105px;
   font-weight: bold;
 }
 .container span.number span:first-child {
