--- a/components/layouts/css/timelinecss.css
+++ b/components/layouts/css/timelinecss.css
@@ -1,6 +1,6 @@
 /* @import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700"); */
 body {
-  height: 100vh;
+  height: 120vh;
   font-family: "Open Sans", sans-serif;
   /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#bea2e7+0,86b7e7+100 */
   background: #bea2e7;
@@ -14,7 +14,9 @@ body {
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#bea2e7', endColorstr='#86b7e7',GradientType=0 );
   /* IE6-9 */
 }
-
+.container {
+  margin-bottom:100
+}
 .container ul {
   margin: 0;
   margin-top: 100px;
